parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD_COLS
    ADD_ROWS
    CTE_S
    FIND_DETERMINANT
    MULTIPLY_COLS
    MULTIPLY_MATRIX
    MULTIPLY_ROWS
    PRINT_MATRIX
    SWAP_COLS
    SWAP_ROWS
    TRANSPOSE_MATRIX

Grammar

Rule 0     S' -> start
Rule 1     start -> global_declaration
Rule 2     global_declaration -> var_declaration global_declaration
Rule 3     global_declaration -> func_declaration
Rule 4     var_declaration -> var_type ID sem_add_var array SEMICOLON
Rule 5     var_declaration -> empty
Rule 6     array -> LEFT_BRACKET expression RIGHT_BRACKET array
Rule 7     array -> empty
Rule 8     func_declaration -> func_signature func_declaration
Rule 9     func_declaration -> main
Rule 10    func_signature -> FUNCTION func_type array func_signature_1 sem_end_func
Rule 11    func_signature_1 -> ID sem_add_func LEFT_PAR param_declaration RIGHT_PAR block
Rule 12    param_declaration -> var_type array ID param_declaration_1
Rule 13    param_declaration -> empty
Rule 14    param_declaration_1 -> COMMA var_type array ID param_declaration_1
Rule 15    param_declaration_1 -> empty
Rule 16    var_type -> INT sem_get_type
Rule 17    var_type -> DOUBLE sem_get_type
Rule 18    var_type -> BOOL sem_get_type
Rule 19    var_cte -> CTE_I sem_push_constant_int
Rule 20    var_cte -> CTE_D sem_push_constant_double
Rule 21    var_cte -> cte_b
Rule 22    var_cte -> ID sem_push_operand array
Rule 23    var_cte -> function_call
Rule 24    cte_b -> TRUE
Rule 25    cte_b -> FALSE
Rule 26    func_type -> INT sem_get_type
Rule 27    func_type -> DOUBLE sem_get_type
Rule 28    func_type -> BOOL sem_get_type
Rule 29    func_type -> VOID sem_get_type
Rule 30    block -> LEFT_BRACE block_1
Rule 31    block_1 -> statement block_1
Rule 32    block_1 -> block_2
Rule 33    block_2 -> RETURN expression SEMICOLON block_3
Rule 34    block_2 -> block_3
Rule 35    block_3 -> RIGHT_BRACE
Rule 36    statement -> var_declaration
Rule 37    statement -> assignment
Rule 38    statement -> condition
Rule 39    statement -> function_call SEMICOLON
Rule 40    statement -> while_cycle
Rule 41    statement -> read
Rule 42    statement -> write
Rule 43    assignment -> ID sem_push_operand ASSIGN sem_push_operator expression sem_assign_value SEMICOLON
Rule 44    expression -> exp expression_1
Rule 45    expression_1 -> IS_EQUAL_TO exp
Rule 46    expression_1 -> NOT_EQUAL_TO exp
Rule 47    expression_1 -> GREATER_THAN exp
Rule 48    expression_1 -> LESS_THAN exp
Rule 49    expression_1 -> GREATER_THAN_OR_EQUAL_TO exp
Rule 50    expression_1 -> LESS_THAN_OR_EQUAL_TO exp
Rule 51    expression_1 -> AND exp
Rule 52    expression_1 -> OR exp
Rule 53    expression_1 -> empty
Rule 54    exp -> term sem_top_term exp_1
Rule 55    exp_1 -> PLUS sem_push_operator exp
Rule 56    exp_1 -> MINUS sem_push_operator exp
Rule 57    exp_1 -> empty
Rule 58    term -> factor sem_top_factor term_1
Rule 59    term_1 -> MULTIPLY sem_push_operator term
Rule 60    term_1 -> DIVIDE sem_push_operator term
Rule 61    term_1 -> empty
Rule 62    factor -> LEFT_PAR sem_false_bottom_begin expression RIGHT_PAR sem_false_bottom_end
Rule 63    factor -> var_cte
Rule 64    factor -> factor_1 var_cte
Rule 65    factor_1 -> PLUS
Rule 66    factor_1 -> MINUS
Rule 67    factor_1 -> empty
Rule 68    condition -> IF LEFT_PAR expression RIGHT_PAR block condition_1
Rule 69    condition_1 -> ELSE block
Rule 70    condition_1 -> empty
Rule 71    function_call -> ID LEFT_PAR param_call RIGHT_PAR
Rule 72    param_call -> expression param_call_1
Rule 73    param_call -> empty
Rule 74    param_call_1 -> COMMA param_call
Rule 75    param_call_1 -> empty
Rule 76    while_cycle -> WHILE LEFT_PAR expression RIGHT_PAR block
Rule 77    read -> READ sem_push_operator LEFT_PAR exp RIGHT_PAR sem_read_write SEMICOLON
Rule 78    write -> WRITE sem_push_operator LEFT_PAR exp RIGHT_PAR SEMICOLON
Rule 79    main -> MAIN block
Rule 80    empty -> <empty>
Rule 81    sem_get_type -> empty
Rule 82    sem_add_func -> empty
Rule 83    sem_end_func -> empty
Rule 84    sem_add_var -> empty
Rule 85    sem_push_operator -> empty
Rule 86    sem_push_operand -> empty
Rule 87    sem_push_constant_int -> empty
Rule 88    sem_push_constant_double -> empty
Rule 89    sem_top_factor -> empty
Rule 90    sem_top_term -> empty
Rule 91    sem_false_bottom_begin -> empty
Rule 92    sem_false_bottom_end -> empty
Rule 93    sem_assign_value -> empty
Rule 94    sem_read_write -> empty

Terminals, with rules where they appear

ADD_COLS             : 
ADD_ROWS             : 
AND                  : 51
ASSIGN               : 43
BOOL                 : 18 28
COMMA                : 14 74
CTE_D                : 20
CTE_I                : 19
CTE_S                : 
DIVIDE               : 60
DOUBLE               : 17 27
ELSE                 : 69
FALSE                : 25
FIND_DETERMINANT     : 
FUNCTION             : 10
GREATER_THAN         : 47
GREATER_THAN_OR_EQUAL_TO : 49
ID                   : 4 11 12 14 22 43 71
IF                   : 68
INT                  : 16 26
IS_EQUAL_TO          : 45
LEFT_BRACE           : 30
LEFT_BRACKET         : 6
LEFT_PAR             : 11 62 68 71 76 77 78
LESS_THAN            : 48
LESS_THAN_OR_EQUAL_TO : 50
MAIN                 : 79
MINUS                : 56 66
MULTIPLY             : 59
MULTIPLY_COLS        : 
MULTIPLY_MATRIX      : 
MULTIPLY_ROWS        : 
NOT_EQUAL_TO         : 46
OR                   : 52
PLUS                 : 55 65
PRINT_MATRIX         : 
READ                 : 77
RETURN               : 33
RIGHT_BRACE          : 35
RIGHT_BRACKET        : 6
RIGHT_PAR            : 11 62 68 71 76 77 78
SEMICOLON            : 4 33 39 43 77 78
SWAP_COLS            : 
SWAP_ROWS            : 
TRANSPOSE_MATRIX     : 
TRUE                 : 24
VOID                 : 29
WHILE                : 76
WRITE                : 78
error                : 

Nonterminals, with rules where they appear

array                : 4 6 10 12 14 22
assignment           : 37
block                : 11 68 69 76 79
block_1              : 30 31
block_2              : 32
block_3              : 33 34
condition            : 38
condition_1          : 68
cte_b                : 21
empty                : 5 7 13 15 53 57 61 67 70 73 75 81 82 83 84 85 86 87 88 89 90 91 92 93 94
exp                  : 44 45 46 47 48 49 50 51 52 55 56 77 78
exp_1                : 54
expression           : 6 33 43 62 68 72 76
expression_1         : 44
factor               : 58
factor_1             : 64
func_declaration     : 3 8
func_signature       : 8
func_signature_1     : 10
func_type            : 10
function_call        : 23 39
global_declaration   : 1 2
main                 : 9
param_call           : 71 74
param_call_1         : 72
param_declaration    : 11
param_declaration_1  : 12 14
read                 : 41
sem_add_func         : 11
sem_add_var          : 4
sem_assign_value     : 43
sem_end_func         : 10
sem_false_bottom_begin : 62
sem_false_bottom_end : 62
sem_get_type         : 16 17 18 26 27 28 29
sem_push_constant_double : 20
sem_push_constant_int : 19
sem_push_operand     : 22 43
sem_push_operator    : 43 55 56 59 60 77 78
sem_read_write       : 77
sem_top_factor       : 58
sem_top_term         : 54
start                : 0
statement            : 31
term                 : 54 59 60
term_1               : 58
var_cte              : 63 64
var_declaration      : 2 36
var_type             : 4 12 14
while_cycle          : 40
write                : 42

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . global_declaration
    (2) global_declaration -> . var_declaration global_declaration
    (3) global_declaration -> . func_declaration
    (4) var_declaration -> . var_type ID sem_add_var array SEMICOLON
    (5) var_declaration -> . empty
    (8) func_declaration -> . func_signature func_declaration
    (9) func_declaration -> . main
    (16) var_type -> . INT sem_get_type
    (17) var_type -> . DOUBLE sem_get_type
    (18) var_type -> . BOOL sem_get_type
    (80) empty -> .
    (10) func_signature -> . FUNCTION func_type array func_signature_1 sem_end_func
    (79) main -> . MAIN block

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for MAIN resolved as shift
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    BOOL            shift and go to state 11
    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 80 (empty -> .) ]
  ! BOOL            [ reduce using rule 80 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 80 (empty -> .) ]
  ! MAIN            [ reduce using rule 80 (empty -> .) ]

    start                          shift and go to state 1
    global_declaration             shift and go to state 2
    var_declaration                shift and go to state 3
    func_declaration               shift and go to state 4
    var_type                       shift and go to state 5
    empty                          shift and go to state 6
    func_signature                 shift and go to state 7
    main                           shift and go to state 8

state 1

    (0) S' -> start .



state 2

    (1) start -> global_declaration .

    $end            reduce using rule 1 (start -> global_declaration .)


state 3

    (2) global_declaration -> var_declaration . global_declaration
    (2) global_declaration -> . var_declaration global_declaration
    (3) global_declaration -> . func_declaration
    (4) var_declaration -> . var_type ID sem_add_var array SEMICOLON
    (5) var_declaration -> . empty
    (8) func_declaration -> . func_signature func_declaration
    (9) func_declaration -> . main
    (16) var_type -> . INT sem_get_type
    (17) var_type -> . DOUBLE sem_get_type
    (18) var_type -> . BOOL sem_get_type
    (80) empty -> .
    (10) func_signature -> . FUNCTION func_type array func_signature_1 sem_end_func
    (79) main -> . MAIN block

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for MAIN resolved as shift
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    BOOL            shift and go to state 11
    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 80 (empty -> .) ]
  ! BOOL            [ reduce using rule 80 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 80 (empty -> .) ]
  ! MAIN            [ reduce using rule 80 (empty -> .) ]

    var_declaration                shift and go to state 3
    global_declaration             shift and go to state 14
    func_declaration               shift and go to state 4
    var_type                       shift and go to state 5
    empty                          shift and go to state 6
    func_signature                 shift and go to state 7
    main                           shift and go to state 8

state 4

    (3) global_declaration -> func_declaration .

    $end            reduce using rule 3 (global_declaration -> func_declaration .)


state 5

    (4) var_declaration -> var_type . ID sem_add_var array SEMICOLON

    ID              shift and go to state 15


state 6

    (5) var_declaration -> empty .

    INT             reduce using rule 5 (var_declaration -> empty .)
    DOUBLE          reduce using rule 5 (var_declaration -> empty .)
    BOOL            reduce using rule 5 (var_declaration -> empty .)
    FUNCTION        reduce using rule 5 (var_declaration -> empty .)
    MAIN            reduce using rule 5 (var_declaration -> empty .)
    RETURN          reduce using rule 5 (var_declaration -> empty .)
    ID              reduce using rule 5 (var_declaration -> empty .)
    IF              reduce using rule 5 (var_declaration -> empty .)
    WHILE           reduce using rule 5 (var_declaration -> empty .)
    READ            reduce using rule 5 (var_declaration -> empty .)
    WRITE           reduce using rule 5 (var_declaration -> empty .)
    RIGHT_BRACE     reduce using rule 5 (var_declaration -> empty .)


state 7

    (8) func_declaration -> func_signature . func_declaration
    (8) func_declaration -> . func_signature func_declaration
    (9) func_declaration -> . main
    (10) func_signature -> . FUNCTION func_type array func_signature_1 sem_end_func
    (79) main -> . MAIN block

    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13

    func_signature                 shift and go to state 7
    func_declaration               shift and go to state 16
    main                           shift and go to state 8

state 8

    (9) func_declaration -> main .

    $end            reduce using rule 9 (func_declaration -> main .)


state 9

    (16) var_type -> INT . sem_get_type
    (81) sem_get_type -> . empty
    (80) empty -> .

    ID              reduce using rule 80 (empty -> .)
    LEFT_BRACKET    reduce using rule 80 (empty -> .)

    sem_get_type                   shift and go to state 17
    empty                          shift and go to state 18

state 10

    (17) var_type -> DOUBLE . sem_get_type
    (81) sem_get_type -> . empty
    (80) empty -> .

    ID              reduce using rule 80 (empty -> .)
    LEFT_BRACKET    reduce using rule 80 (empty -> .)

    sem_get_type                   shift and go to state 19
    empty                          shift and go to state 18

state 11

    (18) var_type -> BOOL . sem_get_type
    (81) sem_get_type -> . empty
    (80) empty -> .

    ID              reduce using rule 80 (empty -> .)
    LEFT_BRACKET    reduce using rule 80 (empty -> .)

    sem_get_type                   shift and go to state 20
    empty                          shift and go to state 18

state 12

    (10) func_signature -> FUNCTION . func_type array func_signature_1 sem_end_func
    (26) func_type -> . INT sem_get_type
    (27) func_type -> . DOUBLE sem_get_type
    (28) func_type -> . BOOL sem_get_type
    (29) func_type -> . VOID sem_get_type

    INT             shift and go to state 22
    DOUBLE          shift and go to state 23
    BOOL            shift and go to state 24
    VOID            shift and go to state 25

    func_type                      shift and go to state 21

state 13

    (79) main -> MAIN . block
    (30) block -> . LEFT_BRACE block_1

    LEFT_BRACE      shift and go to state 27

    block                          shift and go to state 26

state 14

    (2) global_declaration -> var_declaration global_declaration .

    $end            reduce using rule 2 (global_declaration -> var_declaration global_declaration .)


state 15

    (4) var_declaration -> var_type ID . sem_add_var array SEMICOLON
    (84) sem_add_var -> . empty
    (80) empty -> .

    LEFT_BRACKET    reduce using rule 80 (empty -> .)
    SEMICOLON       reduce using rule 80 (empty -> .)

    sem_add_var                    shift and go to state 28
    empty                          shift and go to state 29

state 16

    (8) func_declaration -> func_signature func_declaration .

    $end            reduce using rule 8 (func_declaration -> func_signature func_declaration .)


state 17

    (16) var_type -> INT sem_get_type .

    ID              reduce using rule 16 (var_type -> INT sem_get_type .)
    LEFT_BRACKET    reduce using rule 16 (var_type -> INT sem_get_type .)


state 18

    (81) sem_get_type -> empty .

    ID              reduce using rule 81 (sem_get_type -> empty .)
    LEFT_BRACKET    reduce using rule 81 (sem_get_type -> empty .)


state 19

    (17) var_type -> DOUBLE sem_get_type .

    ID              reduce using rule 17 (var_type -> DOUBLE sem_get_type .)
    LEFT_BRACKET    reduce using rule 17 (var_type -> DOUBLE sem_get_type .)


state 20

    (18) var_type -> BOOL sem_get_type .

    ID              reduce using rule 18 (var_type -> BOOL sem_get_type .)
    LEFT_BRACKET    reduce using rule 18 (var_type -> BOOL sem_get_type .)


state 21

    (10) func_signature -> FUNCTION func_type . array func_signature_1 sem_end_func
    (6) array -> . LEFT_BRACKET expression RIGHT_BRACKET array
    (7) array -> . empty
    (80) empty -> .

    LEFT_BRACKET    shift and go to state 31
    ID              reduce using rule 80 (empty -> .)

    array                          shift and go to state 30
    empty                          shift and go to state 32

state 22

    (26) func_type -> INT . sem_get_type
    (81) sem_get_type -> . empty
    (80) empty -> .

    LEFT_BRACKET    reduce using rule 80 (empty -> .)
    ID              reduce using rule 80 (empty -> .)

    sem_get_type                   shift and go to state 33
    empty                          shift and go to state 18

state 23

    (27) func_type -> DOUBLE . sem_get_type
    (81) sem_get_type -> . empty
    (80) empty -> .

    LEFT_BRACKET    reduce using rule 80 (empty -> .)
    ID              reduce using rule 80 (empty -> .)

    sem_get_type                   shift and go to state 34
    empty                          shift and go to state 18

state 24

    (28) func_type -> BOOL . sem_get_type
    (81) sem_get_type -> . empty
    (80) empty -> .

    LEFT_BRACKET    reduce using rule 80 (empty -> .)
    ID              reduce using rule 80 (empty -> .)

    sem_get_type                   shift and go to state 35
    empty                          shift and go to state 18

state 25

    (29) func_type -> VOID . sem_get_type
    (81) sem_get_type -> . empty
    (80) empty -> .

    LEFT_BRACKET    reduce using rule 80 (empty -> .)
    ID              reduce using rule 80 (empty -> .)

    sem_get_type                   shift and go to state 36
    empty                          shift and go to state 18

state 26

    (79) main -> MAIN block .

    $end            reduce using rule 79 (main -> MAIN block .)


state 27

    (30) block -> LEFT_BRACE . block_1
    (31) block_1 -> . statement block_1
    (32) block_1 -> . block_2
    (36) statement -> . var_declaration
    (37) statement -> . assignment
    (38) statement -> . condition
    (39) statement -> . function_call SEMICOLON
    (40) statement -> . while_cycle
    (41) statement -> . read
    (42) statement -> . write
    (33) block_2 -> . RETURN expression SEMICOLON block_3
    (34) block_2 -> . block_3
    (4) var_declaration -> . var_type ID sem_add_var array SEMICOLON
    (5) var_declaration -> . empty
    (43) assignment -> . ID sem_push_operand ASSIGN sem_push_operator expression sem_assign_value SEMICOLON
    (68) condition -> . IF LEFT_PAR expression RIGHT_PAR block condition_1
    (71) function_call -> . ID LEFT_PAR param_call RIGHT_PAR
    (76) while_cycle -> . WHILE LEFT_PAR expression RIGHT_PAR block
    (77) read -> . READ sem_push_operator LEFT_PAR exp RIGHT_PAR sem_read_write SEMICOLON
    (78) write -> . WRITE sem_push_operator LEFT_PAR exp RIGHT_PAR SEMICOLON
    (35) block_3 -> . RIGHT_BRACE
    (16) var_type -> . INT sem_get_type
    (17) var_type -> . DOUBLE sem_get_type
    (18) var_type -> . BOOL sem_get_type
    (80) empty -> .

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for RIGHT_BRACE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    RETURN          shift and go to state 47
    ID              shift and go to state 49
    IF              shift and go to state 50
    WHILE           shift and go to state 51
    READ            shift and go to state 52
    WRITE           shift and go to state 53
    RIGHT_BRACE     shift and go to state 54
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    BOOL            shift and go to state 11

  ! RETURN          [ reduce using rule 80 (empty -> .) ]
  ! ID              [ reduce using rule 80 (empty -> .) ]
  ! IF              [ reduce using rule 80 (empty -> .) ]
  ! WHILE           [ reduce using rule 80 (empty -> .) ]
  ! READ            [ reduce using rule 80 (empty -> .) ]
  ! WRITE           [ reduce using rule 80 (empty -> .) ]
  ! RIGHT_BRACE     [ reduce using rule 80 (empty -> .) ]
  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 80 (empty -> .) ]
  ! BOOL            [ reduce using rule 80 (empty -> .) ]

    block_1                        shift and go to state 37
    statement                      shift and go to state 38
    block_2                        shift and go to state 39
    var_declaration                shift and go to state 40
    assignment                     shift and go to state 41
    condition                      shift and go to state 42
    function_call                  shift and go to state 43
    while_cycle                    shift and go to state 44
    read                           shift and go to state 45
    write                          shift and go to state 46
    block_3                        shift and go to state 48
    var_type                       shift and go to state 5
    empty                          shift and go to state 6

state 28

    (4) var_declaration -> var_type ID sem_add_var . array SEMICOLON
    (6) array -> . LEFT_BRACKET expression RIGHT_BRACKET array
    (7) array -> . empty
    (80) empty -> .

    LEFT_BRACKET    shift and go to state 31
    SEMICOLON       reduce using rule 80 (empty -> .)

    array                          shift and go to state 55
    empty                          shift and go to state 32

state 29

    (84) sem_add_var -> empty .

    LEFT_BRACKET    reduce using rule 84 (sem_add_var -> empty .)
    SEMICOLON       reduce using rule 84 (sem_add_var -> empty .)


state 30

    (10) func_signature -> FUNCTION func_type array . func_signature_1 sem_end_func
    (11) func_signature_1 -> . ID sem_add_func LEFT_PAR param_declaration RIGHT_PAR block

    ID              shift and go to state 57

    func_signature_1               shift and go to state 56

state 31

    (6) array -> LEFT_BRACKET . expression RIGHT_BRACKET array
    (44) expression -> . exp expression_1
    (54) exp -> . term sem_top_term exp_1
    (58) term -> . factor sem_top_factor term_1
    (62) factor -> . LEFT_PAR sem_false_bottom_begin expression RIGHT_PAR sem_false_bottom_end
    (63) factor -> . var_cte
    (64) factor -> . factor_1 var_cte
    (19) var_cte -> . CTE_I sem_push_constant_int
    (20) var_cte -> . CTE_D sem_push_constant_double
    (21) var_cte -> . cte_b
    (22) var_cte -> . ID sem_push_operand array
    (23) var_cte -> . function_call
    (65) factor_1 -> . PLUS
    (66) factor_1 -> . MINUS
    (67) factor_1 -> . empty
    (24) cte_b -> . TRUE
    (25) cte_b -> . FALSE
    (71) function_call -> . ID LEFT_PAR param_call RIGHT_PAR
    (80) empty -> .

  ! shift/reduce conflict for CTE_I resolved as shift
  ! shift/reduce conflict for CTE_D resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    LEFT_PAR        shift and go to state 62
    CTE_I           shift and go to state 65
    CTE_D           shift and go to state 66
    ID              shift and go to state 68
    PLUS            shift and go to state 70
    MINUS           shift and go to state 71
    TRUE            shift and go to state 73
    FALSE           shift and go to state 74

  ! CTE_I           [ reduce using rule 80 (empty -> .) ]
  ! CTE_D           [ reduce using rule 80 (empty -> .) ]
  ! ID              [ reduce using rule 80 (empty -> .) ]
  ! TRUE            [ reduce using rule 80 (empty -> .) ]
  ! FALSE           [ reduce using rule 80 (empty -> .) ]

    expression                     shift and go to state 58
    exp                            shift and go to state 59
    term                           shift and go to state 60
    factor                         shift and go to state 61
    var_cte                        shift and go to state 63
    factor_1                       shift and go to state 64
    cte_b                          shift and go to state 67
    function_call                  shift and go to state 69
    empty                          shift and go to state 72

state 32

    (7) array -> empty .

    ID              reduce using rule 7 (array -> empty .)
    SEMICOLON       reduce using rule 7 (array -> empty .)
    MULTIPLY        reduce using rule 7 (array -> empty .)
    DIVIDE          reduce using rule 7 (array -> empty .)
    PLUS            reduce using rule 7 (array -> empty .)
    MINUS           reduce using rule 7 (array -> empty .)
    IS_EQUAL_TO     reduce using rule 7 (array -> empty .)
    NOT_EQUAL_TO    reduce using rule 7 (array -> empty .)
    GREATER_THAN    reduce using rule 7 (array -> empty .)
    LESS_THAN       reduce using rule 7 (array -> empty .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 7 (array -> empty .)
    LESS_THAN_OR_EQUAL_TO reduce using rule 7 (array -> empty .)
    AND             reduce using rule 7 (array -> empty .)
    OR              reduce using rule 7 (array -> empty .)
    RIGHT_BRACKET   reduce using rule 7 (array -> empty .)
    COMMA           reduce using rule 7 (array -> empty .)
    RIGHT_PAR       reduce using rule 7 (array -> empty .)


state 33

    (26) func_type -> INT sem_get_type .

    LEFT_BRACKET    reduce using rule 26 (func_type -> INT sem_get_type .)
    ID              reduce using rule 26 (func_type -> INT sem_get_type .)


state 34

    (27) func_type -> DOUBLE sem_get_type .

    LEFT_BRACKET    reduce using rule 27 (func_type -> DOUBLE sem_get_type .)
    ID              reduce using rule 27 (func_type -> DOUBLE sem_get_type .)


state 35

    (28) func_type -> BOOL sem_get_type .

    LEFT_BRACKET    reduce using rule 28 (func_type -> BOOL sem_get_type .)
    ID              reduce using rule 28 (func_type -> BOOL sem_get_type .)


state 36

    (29) func_type -> VOID sem_get_type .

    LEFT_BRACKET    reduce using rule 29 (func_type -> VOID sem_get_type .)
    ID              reduce using rule 29 (func_type -> VOID sem_get_type .)


state 37

    (30) block -> LEFT_BRACE block_1 .

    $end            reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    ELSE            reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    RETURN          reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    ID              reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    IF              reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    WHILE           reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    READ            reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    WRITE           reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    RIGHT_BRACE     reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    INT             reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    DOUBLE          reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    BOOL            reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    FUNCTION        reduce using rule 30 (block -> LEFT_BRACE block_1 .)
    MAIN            reduce using rule 30 (block -> LEFT_BRACE block_1 .)


state 38

    (31) block_1 -> statement . block_1
    (31) block_1 -> . statement block_1
    (32) block_1 -> . block_2
    (36) statement -> . var_declaration
    (37) statement -> . assignment
    (38) statement -> . condition
    (39) statement -> . function_call SEMICOLON
    (40) statement -> . while_cycle
    (41) statement -> . read
    (42) statement -> . write
    (33) block_2 -> . RETURN expression SEMICOLON block_3
    (34) block_2 -> . block_3
    (4) var_declaration -> . var_type ID sem_add_var array SEMICOLON
    (5) var_declaration -> . empty
    (43) assignment -> . ID sem_push_operand ASSIGN sem_push_operator expression sem_assign_value SEMICOLON
    (68) condition -> . IF LEFT_PAR expression RIGHT_PAR block condition_1
    (71) function_call -> . ID LEFT_PAR param_call RIGHT_PAR
    (76) while_cycle -> . WHILE LEFT_PAR expression RIGHT_PAR block
    (77) read -> . READ sem_push_operator LEFT_PAR exp RIGHT_PAR sem_read_write SEMICOLON
    (78) write -> . WRITE sem_push_operator LEFT_PAR exp RIGHT_PAR SEMICOLON
    (35) block_3 -> . RIGHT_BRACE
    (16) var_type -> . INT sem_get_type
    (17) var_type -> . DOUBLE sem_get_type
    (18) var_type -> . BOOL sem_get_type
    (80) empty -> .

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for RIGHT_BRACE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    RETURN          shift and go to state 47
    ID              shift and go to state 49
    IF              shift and go to state 50
    WHILE           shift and go to state 51
    READ            shift and go to state 52
    WRITE           shift and go to state 53
    RIGHT_BRACE     shift and go to state 54
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    BOOL            shift and go to state 11

  ! RETURN          [ reduce using rule 80 (empty -> .) ]
  ! ID              [ reduce using rule 80 (empty -> .) ]
  ! IF              [ reduce using rule 80 (empty -> .) ]
  ! WHILE           [ reduce using rule 80 (empty -> .) ]
  ! READ            [ reduce using rule 80 (empty -> .) ]
  ! WRITE           [ reduce using rule 80 (empty -> .) ]
  ! RIGHT_BRACE     [ reduce using rule 80 (empty -> .) ]
  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 80 (empty -> .) ]
  ! BOOL            [ reduce using rule 80 (empty -> .) ]

    statement                      shift and go to state 38
    block_1                        shift and go to state 75
    block_2                        shift and go to state 39
    var_declaration                shift and go to state 40
    assignment                     shift and go to state 41
    condition                      shift and go to state 42
    function_call                  shift and go to state 43
    while_cycle                    shift and go to state 44
    read                           shift and go to state 45
    write                          shift and go to state 46
    block_3                        shift and go to state 48
    var_type                       shift and go to state 5
    empty                          shift and go to state 6

state 39

    (32) block_1 -> block_2 .

    $end            reduce using rule 32 (block_1 -> block_2 .)
    ELSE            reduce using rule 32 (block_1 -> block_2 .)
    RETURN          reduce using rule 32 (block_1 -> block_2 .)
    ID              reduce using rule 32 (block_1 -> block_2 .)
    IF              reduce using rule 32 (block_1 -> block_2 .)
    WHILE           reduce using rule 32 (block_1 -> block_2 .)
    READ            reduce using rule 32 (block_1 -> block_2 .)
    WRITE           reduce using rule 32 (block_1 -> block_2 .)
    RIGHT_BRACE     reduce using rule 32 (block_1 -> block_2 .)
    INT             reduce using rule 32 (block_1 -> block_2 .)
    DOUBLE          reduce using rule 32 (block_1 -> block_2 .)
    BOOL            reduce using rule 32 (block_1 -> block_2 .)
    FUNCTION        reduce using rule 32 (block_1 -> block_2 .)
    MAIN            reduce using rule 32 (block_1 -> block_2 .)


state 40

    (36) statement -> var_declaration .

    RETURN          reduce using rule 36 (statement -> var_declaration .)
    ID              reduce using rule 36 (statement -> var_declaration .)
    IF              reduce using rule 36 (statement -> var_declaration .)
    WHILE           reduce using rule 36 (statement -> var_declaration .)
    READ            reduce using rule 36 (statement -> var_declaration .)
    WRITE           reduce using rule 36 (statement -> var_declaration .)
    RIGHT_BRACE     reduce using rule 36 (statement -> var_declaration .)
    INT             reduce using rule 36 (statement -> var_declaration .)
    DOUBLE          reduce using rule 36 (statement -> var_declaration .)
    BOOL            reduce using rule 36 (statement -> var_declaration .)


state 41

    (37) statement -> assignment .

    RETURN          reduce using rule 37 (statement -> assignment .)
    ID              reduce using rule 37 (statement -> assignment .)
    IF              reduce using rule 37 (statement -> assignment .)
    WHILE           reduce using rule 37 (statement -> assignment .)
    READ            reduce using rule 37 (statement -> assignment .)
    WRITE           reduce using rule 37 (statement -> assignment .)
    RIGHT_BRACE     reduce using rule 37 (statement -> assignment .)
    INT             reduce using rule 37 (statement -> assignment .)
    DOUBLE          reduce using rule 37 (statement -> assignment .)
    BOOL            reduce using rule 37 (statement -> assignment .)


state 42

    (38) statement -> condition .
